--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ backports.zoneinfo==0.2.1
 confusable-homoglyphs==3.2.0
 Django==4.0.5
 django-bootstrap3==21.2
+django-crispy-forms==1.14.0
 django-registration==3.3
+Pillow==9.1.1
 psycopg2==2.9.3
 python-decouple==3.6
 sqlparse==0.4.2
